# astrology-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  start.bat  start.sh
app/: __init__.py  config.py  main.py
app/api/v1/: models.py  router.py
app/api/v1/endpoints/: chart.py  daily_horoscope.py  dasha.py  divisional.py  horoscope.py  kp.py  kundli.py  kundli_matching.py  matching.py  panchang.py  yogas.py
app/core/: __init__.py  chart_engine.py  ephemeris.py  horoscope_engine.py  remedies.py  transit_horoscope.py
app/core/kp/: __init__.py  kp_system.py
app/core/matching/: __init__.py  ashtakoot.py  dashakoot.py
app/core/vedic/: __init__.py  ashtakavarga.py  dasha.py  divisional_charts.py  panchang.py  yogas_doshas.py
